# react-autorun

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  plugin.ts  transform.ts  tsconfig.json  types.d.ts
babel/: babel.test.ts  babel.ts
plugin/: config.ts  index.ts  store.ts
plugin/babel/: babel.test.ts  index.ts  package.json
plugin/babel/scripts/: build.ts
plugin/swc/: Cargo.toml  package.json  react_autorun.rs  react_autorun_test.rs
plugin/transformers/: hook_transformer.ts  hook_transformer_factory.ts  program_transformer.ts  root_transformer.ts  transformer.ts  use_callback_transformer.ts  use_ref_transformer.ts  use_state_transformer.ts
plugin/transformers/hook_transformers/: dependent_hook_transformer.ts  hook_transformer.ts  index.ts  use_callback_transformer.ts  use_effect_transformer.ts  use_insertion_effect_transformer.ts  use_layout_effect_transformer.ts  use_memo_transformer.ts  use_ref_transformer.ts  use_state_transformer.ts
plugin/utils/: ast.ts  function.ts
runtime/: index.ts  package.json  runtime.test.ts  runtime.ts
scripts/: build.js  build.ts  test.ts  transform.js  transform.ts
swc/: Cargo.toml  package.json  react_autorun.rs  react_autorun_test.rs  swc.rs  swc.test.rs
test/fixture/does not generate deps if autorun was not imported/: input.ts
test/fixture/generates deps based on component variables/: output.ts
test/fixture/generates deps from member call expression/: input.ts
test/fixture/generates distinct deps/: output.ts
test/fixture/includes full member expression in deps/: input.ts  output.ts
transform/: .gitignore
(+12 files in other folders)
