[package]
name = "react-autorun"
version = "0.1.0"
edition = "2021"

[lib]
path = "swc.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
swc_core = { version = "0.76.*", features = ["ecma_plugin_transform", "ecma_utils"] }

[dev-dependencies]
serde = "1"
serde_json = "1"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
