[package]
name = "react_autorun"
version = "0.1.0"
edition = "2021"

[lib]
path = "react_autorun.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
swc_core = { version = "0.76.*", features = ["ecma_plugin_transform", "ecma_utils"] }

[dev-dependencies]
serde = "1"
serde_json = "1"
env_logger = "0.10"
testing = "0.33.13"

[[test]]
name = "react_autorun_test"
path = "react_autorun_test.rs"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
